<resources>
    <string name="app_name">BuyList</string>

    <!--Bottom navigation-->
    <string name="action_buy_list_text">Списки</string>
    <string name="action_pattern_text">Шаблоны</string>
    <string name="action_recipe_text">Рецепты</string>


    <!--Drawer-->
    <string name="nav_product_dictionary">Словарь продуктов</string>
    <string name="nav_group_info">Информация</string>
    <string name="nav_feedback">Отправить отзыв</string>
    <string name="nav_about">О приложении</string>


    <!--Snackbar text-->
    <string name="snackbar_action_ok">OK</string>
    <string name="snackbar_buy_lists_loading_error">Не удалось загрузить список покупок.</string>
    <string name="snackbar_empty_buy_list_title">Введите название списка.</string>
    <string name="snackbar_empty_product_name">Введите название продукта.</string>
    <string name="snackbar_patterns_loading_error">Не удалось загрузить список покупок.</string>
    <string name="snackbar_empty_pattern_title">Введите название шаблона.</string>
    <string name="snackbar_products_loading_error">Не удалось загрузить список продуктов.</string>
    <string name="snackbar_recipes_loading_error">Не удалось загрузить список рецептов.</string>
    <string name="snackbar_recipe_loading_error">Не удалось загрузить рецепт.</string>
    <string name="snackbar_empty_recipe_title">Введите название рецепта.</string>
    <string name="snackbar_no_products_in_pattern">В выбранном шаблоне нет продуктов</string>
    <string name="snackbar_no_products_in_recipe">В выбранном рецепте нет продуктов</string>
    <string name="snackbar_products_moved_from_pattern">Продукты из шаблона перенесены в список покупок</string>
    <string name="snackbar_products_moved_from_recipe">Продукты из рецепта перенесены в список покупок</string>

    <!--Default-->
    <string name="item_name_default_text">Название продукта</string>
        <!--hint-->
        <string name="field_quantity_hint">1</string>
        <string name="field_unit_hint">шт</string>


    <!--BuyList-->
    <string name="tv_buy_list_info">Создайте свой первый список покупок</string>
    <string name="tv_buylist_detail_info">Список покупок пуст</string>
    <string name="btn_pattern_text">По шаблону</string>
    <string name="btn_recipe_text">По рецепту</string>
    <string name="btn_new_item_text">Новый товар</string>
    <string name="tv_patterns_not_found">Шаблоны не найдены</string>
    <string name="tv_recipes_not_found">Рецепты не найдены</string>
        <!--hint-->
        <string name="field_name_buy_list_hint">Введите название списка</string>


    <!--Pattern-->
    <string name="tv_pattern_list_info">Создайте свой первый шаблон</string>
    <string name="tv_pattern_detail_info">Шаблон пуст</string>
        <!--hint-->
        <string name="field_name_pattern_hint">Введите название шаблона</string>


    <!--Recipe-->
    <string name="tv_recipe_list_info">Создайте свой первый рецепт</string>
    <string name="tv_general_header">Основная информация</string>
    <string name="ingredient_text">Ингредиенты</string>
    <string name="cooking_steps_text">Шаги приготовления</string>
    <string name="add_new_step">Добавить шаг</string>
    <string name="number_of_step">%d.</string>
    <string name="tv_cooking_time">Готовится за:</string>
    <string name="fragment_label_new_recipe">Новый рецепт</string>
    <string name="default_recipe_title">(Без названия…)</string>
    <string name="tv_recipe_category">Категория рецепта:</string>
    <string name="tv_cooking_time_detail">Время приготовления:</string>
        <!--hint-->
        <string name="field_name_recipe_hint">Название</string>
        <string name="field_recipe_category_hint">Категория</string>
        <string name="field_recipe_step_hint">Описание шага</string>
        <string name="field_cooking_time_hint">Время приготовления</string>


    <!--ProductDictionary-->
    <string name="tv_product_dictionary_empty">Словарь пуст</string>


    <!--AboutActivity-->
    <string name="slide_welcome_title">Добро пожаловать в BuyList!</string>
    <string name="slide_welcome_main">Приложение для составления списков покупок</string>
    <string name="slide_list_title">Коллекция списков</string>
    <string name="slide_list_main">Составляй списки покупок</string>
    <string name="slide_pattern_title">Удобные шаблоны</string>
    <string name="slide_pattern_main">Создавай шаблоны на основе регулярно приобретаемых товаров
        или любимых магазинов</string>
    <string name="slide_recipe_title">Любимые рецепты</string>
    <string name="slide_recipe_main">Сохраняй любимые рецепты и переноси ингредиенты в список
        покупок</string>
    <string name="slide_product_dictionary_title">Словарь продуктов</string>
    <string name="slide_product_dictionary_main">Добавляй регулярно приобретаемые товары в словарь
        для более конкретных подсказок при заполнении списка</string>

    <!--ContentDescription-->
    <string name="logo_description">Логотип</string>
    <string name="btn_new_buy_list_description">Создать список</string>
    <string name="btn_create_buy_list_description">Сохранить список</string>
    <string name="btn_create_cooking_step_description">Сохранить шаг</string>
    <string name="btn_new_pattern_description">Создать шаблон</string>
    <string name="btn_create_pattern_description">Сохранить шаблон</string>
    <string name="btn_new_recipe_description">Создать рецепт</string>
    <string name="btn_create_recipe_description">Сохранить рецепт</string>
    <string name="btn_edit_collection_description">Редактировать список</string>
    <string name="btn_delete_collection_description">Удалить список</string>
    <string name="img_circle_description">Маркер</string>
    <string name="fab_visibility_description">Показать или скрыть купленные товары</string>
    <string name="category_marker_description">Цвет категории</string>
    <string name="btn_prev_color_description">Предыдущие цвета</string>
    <string name="btn_next_color_description">Следующие цвета</string>
    <string name="btn_new_ingredient_description">Добавить ингредиент</string>
    <string name="btn_create_item_description">Сохранить товар</string>






    <string-array name="category_color">
        <!--мясо-->
        <item>#EF5350</item>
        <!--хозтовары-->
        <item>#EC407A</item>
        <!--консерв-->
        <item>#AB47BC</item>
        <!--орехи/сухофрукты-->
        <item>#7E57C2</item>
        <!--рыба-->
        <item>#5C6BC0</item>
        <!--заморозка-->
        <item>#42A5F5</item>
        <!--напитки-->
        <item>#29B6F6</item>
        <!--молочка-->
        <item>#26C6DA</item>
        <!---->
        <item>#26A69A</item>
        <!--овощи/зелень-->
        <item>#66BB6A</item>
        <!--соусы / масла-->
        <item>#9CCC65</item>
        <!---->
        <item>#D4E157</item>
        <!--фрукты-->
        <item>#FFEE58</item>
        <!---->
        <item>#FFCA28</item>
        <!--хлебобулочные-->
        <item>#FFA726</item>
        <!--бакалея-->
        <item>#FF7043</item>


    </string-array>


</resources>
