<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/product_dictionary_fragment"
            android:title="@string/nav_product_dictionary"
            android:icon="@drawable/ic_book" />
    </group>

    <item android:title="@string/nav_group_info">
        <menu>
<!--            <group android:checkableBehavior="single">-->
                <item
                    android:id="@+id/nav_feedback"
                    android:title="@string/nav_feedback"
                    android:icon="@drawable/ic_email" />
                <item
                    android:id="@+id/about_fragment"
                    android:title="@string/nav_about"
                    android:icon="@drawable/ic_info" />

<!--            </group>-->
        </menu>
    </item>

</menu>
