<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="ru.buylist.buy_list.NewItemViewModel" />
        <variable
            name="callback"
            type="ru.buylist.buy_list.CategoryCallback" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Палитра цветов-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_circles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/btn_next_circles"
                android:layout_toEndOf="@id/btn_prev_circles"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal" />

            <ImageButton
                android:id="@+id/btn_prev_circles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_arrow_left"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_prev_color_description"
                android:visibility="@{viewmodel.btnPrevCirclesShow ? View.VISIBLE : View.GONE}"
                android:onClick="@{()-> callback.onPrevCircleButtonClick()}"/>

            <ImageButton
                android:id="@+id/btn_next_circles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_arrow_right"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_next_color_description"
                android:visibility="@{viewmodel.btnNextCirclesShow ? View.GONE : View.VISIBLE}"
                android:onClick="@{()-> callback.onNextCircleButtonClick()}"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_item_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/field_border">

            <ru.buylist.utils.FocusableEditText
                android:id="@+id/field_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:hint="@string/item_name_default_text"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/field_quantity"
                android:background="@android:color/transparent"
                android:text="@={viewmodel.itemName}"
                requestFocus="@{viewmodel.keyboardShow}"/>

            <ru.buylist.utils.FocusableEditText
                android:id="@+id/field_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/field_quantity_margin_end"
                android:gravity="center"
                android:hint="@string/field_quantity_hint"
                android:inputType="numberDecimal"
                android:digits="0123456789.,"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/field_unit"
                android:background="@drawable/field_bg"
                android:text="@={viewmodel.quantity}"/>

            <ru.buylist.utils.FocusableEditText
                android:id="@+id/field_unit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/field_unit_hint"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:background="@drawable/field_bg"
                android:text="@={viewmodel.unit}"/>

            <ImageButton
                android:id="@+id/btn_create_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_create_item_description"
                android:src="@drawable/button_create"
                android:onClick="@{()-> callback.onCreateButtonClick()}"/>

            <LinearLayout
                android:id="@+id/layout_animation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorDivider"
                android:gravity="center"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Добавлено в список" />
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
</layout>