<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="view_model"
            type="ru.buylist.presentation.recipe_add_edit.RecipeAddEditViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:background="@drawable/field_border"
            android:layout_marginBottom="8dp"
            android:hint="@string/field_name_recipe_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:text="@={view_model.recipeTitle}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:background="@drawable/field_border"
            android:layout_marginBottom="8dp"
            android:hint="@string/field_recipe_category_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_recipe_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/btn_more_category"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:text="@={view_model.recipeCategory}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:background="@drawable/field_border"
            android:hint="@string/field_cooking_time_hint">

            <EditText
                android:id="@+id/field_cooking_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:text="@={view_model.recipeCookingTime}" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</layout>