<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="view_model"
            type="ru.buylist.view_models.PatternsViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/coordinator_layout">

            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_pattern_list_info"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:drawableTop="@drawable/ic_pattern"
                    android:visibility="@{view_model.listIsEmpty ? View.VISIBLE : View.GONE}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:items="@{view_model.wrappedPatterns}" />
                </LinearLayout>
            </FrameLayout>

            <View
                android:id="@+id/shadow_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorScrim"
                android:elevation="8dp"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/layout_new_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@color/colorWhite"
                android:elevation="8dp"
                android:visibility="invisible">

                <LinearLayout
                    android:id="@+id/layout_pattern_fields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/default_horizontal_margin"
                    android:layout_marginTop="@dimen/field_margin_vertical"
                    android:layout_marginEnd="@dimen/default_horizontal_margin"
                    android:layout_marginBottom="@dimen/field_margin_vertical"
                    android:background="@drawable/field_border">

                    <ru.buylist.utils.FocusableEditText
                        android:id="@+id/field_name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:hint="@string/item_name_default_text"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@id/field_quantity"
                        android:background="@android:color/transparent"
                        android:text="@={view_model.patternTitle}" />

                    <ru.buylist.utils.FocusableEditText
                        android:id="@+id/field_quantity"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/field_quantity_margin_end"
                        android:gravity="center"
                        android:hint="@string/field_quantity_hint"
                        android:inputType="numberDecimal"
                        android:digits="0123456789.,"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@id/field_unit"
                        android:background="@drawable/field_bg" />

                    <ru.buylist.utils.FocusableEditText
                        android:id="@+id/field_unit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/field_unit_hint"
                        android:inputType="text"
                        android:imeOptions="actionDone"
                        android:background="@drawable/field_bg" />

                    <ImageButton
                        android:id="@+id/btn_create"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/btn_create_item_description"
                        android:src="@drawable/button_create" />

                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useCompatPadding="true"
                app:layout_anchor="@id/frame_layout"
                app:layout_anchorGravity="end|bottom"
                app:fabSize="auto"
                android:src="@drawable/fab_add_white"
                android:backgroundTint="@color/colorAccent"
                app:fabVisibility="@{view_model.fabIsShown}" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>
</layout>